test/fixtures/type-error/cyclic.lys
var a = "hello"
var bytes = a.length